Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <ul>
 <li>登录 <a href="https://bandwagonhost.com/">https://bandwagonhost.com/</a> 并进入 My service -》 kiwivm control 面板。</li>
 <li>
-<strong>KiwiVM Extras</strong> -&gt; ** API ** ，在此页可以看到 veid ，并点击  ** show api key ** ,找到 api key。</li>
+<strong>KiwiVM Extras</strong> -&gt; <strong>API</strong> ，在此页可以看到 <strong>veid</strong> ，并点击  <strong>show api key</strong> ,找到 <strong>api key</strong>。</li>
 <li>打开 《搬瓦工》app ，输入veid &amp; apikey 登录。<br>
 登录成功后，会记录你的veid和apikey ，veid 存储到 NSUserdefault 中，非安全。apikye 存储到 keychain中，如果手机支持指纹识别，
 那么每次进入VPS的时候，会要求输入touchu ID，来保证服务器操作安全。</li>
